--- a/README.rdoc
+++ b/README.rdoc
@@ -1,4 +1,5 @@
 Watch the Skies Dashboard
+[![Build Status](https://travis-ci.org/travis-ci/travis-web.svg?branch=master)](https://travis-ci.org/travis-ci/travis-web)
 
 For crappy old code see: https://github.com/FifthSurprise/WatchTheSkiesDashboard
 
